HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateAssociatedTypeName/Expected.uv
//! Expected diagnostic metadata for the DuplicateAssociatedTypeName rejected-source specimen.

expectedDiagnostic("E-TYP-2504", "diag.14.AssociatedTypes")
